--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1225,9 +1225,9 @@
       display: flex;
       transition: all 0.5s;
 }
-.game__list--item{
+/* .game__list--item{
 
-}
+} */
 .game__list--itemImg{
       width: 38.4rem;
       border-radius: 0.4rem;
@@ -1342,4 +1342,115 @@
 }
 .footer__website--link:hover{
       opacity: 0.8;
+}
+/* hổ trợ */
+.support{
+      position: fixed;
+      font-size: 3.5rem;
+      bottom: 6rem;
+      right: 5rem;
+      cursor: pointer;
+      color: var(--white-color);
+      padding: 12px 10px;
+      background-color: #E97F02;
+      border-radius: 40px;
+}
+
+.supportList__form{
+      position: fixed;
+      right: 5rem;
+      bottom: 5rem;
+      width: 30rem;
+      height: 44rem;
+      background-color: #fff;
+      border: 0.4rem solid #fd7e14;
+      border-radius: 0.4rem;
+      transition: all 0.4s;
+      animation: directional linear 0.4s;
+      z-index: 5;
+}
+
+.supportList__form--close{
+      display: flex;
+      justify-content: flex-end;
+      padding: 0.5rem;
+      background-color:#fd7e14 ;
+}
+.supportList__form--close i{
+      font-size: 2rem;
+      padding: 0.5rem;
+      border: 0.1rem solid #fff;
+      border-radius: 0.2rem;
+
+}
+.supportList__form--close i:hover{
+      opacity: 0.6;
+      cursor: pointer;
+}
+.supportList__form--heading{
+      display: flex;
+}
+.supportList__form--img{
+      max-width: 6rem;
+      padding: 1rem;
+}
+.supportList__form--heading p{
+      font-size: 1.2rem;
+      margin-top: 1.2rem;
+}
+.supportList__form--callTitle{
+      font-size: 1.6rem;
+      font-weight: 400;
+      margin: 1rem;
+}
+.supportList__form--callOption{
+      width: 90%;
+      margin: 1rem;
+      padding: 0.4rem 3.3rem 0.4rem 0.8rem;
+      font-size: 1.3rem;
+      outline: none;
+      border: 0.2rem solid #fd7e14;
+      border-radius: 0.2rem;
+}
+.supportList__form--nameTitle{
+      font-size: 1.6rem;
+      font-weight: 400;
+      margin: 1rem;
+}
+.supportList__form--nameInput{
+      width: 90%;
+      margin: 1rem;
+      padding: 0.6rem 3.3rem 0.6rem 0.8rem;
+      font-size: 1.4rem;
+      outline: none;
+      border: 0.2rem solid #fd7e14;
+      border-radius: 0.2rem;
+}
+.supportList__form--phoneTitle{
+      font-size: 1.6rem;
+      font-weight: 400;
+      margin: 1rem;
+}
+.supportList__form--phoneInput{
+      width: 90%;
+      margin: 1rem;
+      padding: 0.6rem 3.3rem 0.6rem 0.8rem;
+      font-size: 1.4rem;
+      outline: none;
+      border: 0.2rem solid #fd7e14;
+      border-radius: 0.2rem;
+}
+.supportList__btn{
+      margin: 1.5rem 1rem ;
+      padding: 0.6rem 0.8rem;
+      font-size: 1.4rem;
+      color: var(--white-color);
+      background-color: #6c757d;
+      border-color: #6c757d;
+      border-radius: 0.2rem;
+      cursor: pointer;
+      opacity: 0.8;
+}
+.supportList__btn:hover{
+      opacity: 1;
 }
